--- a/styles/layout.css
+++ b/styles/layout.css
@@ -13,6 +13,20 @@ main {
   & .main-container {
     max-width: 33rem;
     margin-left: auto;
+
+    & .back {
+      display: flex;
+      align-items: center;
+      gap: .5rem;
+
+      margin-bottom: 1.5rem;
+    }
+
+    & h1 {
+      font: 600 1.5rem/1.25 var(--font-family);
+      
+      margin-bottom: .5rem;
+    }
   }
 }
 
@@ -22,5 +36,19 @@ aside {
 
   & .aside-container {
     max-width: 31rem;
+
+    & h2 {
+      margin-block: .5rem;
+
+      font: 600 2.5rem/1.25 var(--font-family);
+
+      & span {
+        color: var(--text-highlight);
+      }
+    }
+
+    & > img {
+      margin-top: 2rem;
+    }
   }
 }
