--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -8,7 +8,8 @@ select {
   color: var(--text-primary);
 
   border-radius: 0.5rem;
-  border: 1px solid var(--stroke-default);
+  border: 1px solid transparent;
+  outline: 1px solid var(--stroke-default);
   padding: 0.75rem;
 }
 
