--- a/styles/form.css
+++ b/styles/form.css
@@ -27,3 +27,9 @@ fieldset + fieldset {
   display: flex;
   gap: 1rem;
 }
+
+@media (width <= 31.25em) {
+  .actions-wrapper {
+    flex-direction: column;
+  }
+}
